<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/startTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:ems="10"
        android:hint="@string/fromHourHint"
        android:textSize="24sp"
        android:gravity="center"
        android:onClick="setStartTime"/>

    <TextView
        android:id="@+id/endTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/toHourHint"
        android:textSize="24sp"
        android:onClick="setEndTime"/>

    <EditText
        android:id="@+id/scheduleTempEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:hint="@string/setValueHint"
        android:inputType="number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/deleteTimeFrameBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:drawable/ic_delete"
        android:onClick="deleteTimeFrame" />


</LinearLayout>